# pkdevsys_init

./: .gitignore  README.md  install.sh
configs/: cargo_config.toml  pkdevsys_config.toml  zshrc.sh
pkdevsys_tools/: Cargo.toml
pkdevsys_tools/configs/: pkdevsys_config.toml
pkdevsys_tools/src/lib/: mod.rs  traits.rs
scripts/: git-prepare.sh  install_configs.sh  install_tools.sh
todo/: checkSignature  git_prepare.sh
