##########################################################################
# ph0llux:a8ec7386ff1c9581f1f1560b02d53888b81843f3abd1b381629333a19662e6bf
##########################################################################
#cargo-features = ["strip"] # needed to strip the symbol table (rust nightly is needed) for size optimizations.

[package]
name = "pkdevsys_tools"
version = "0.1.0"
authors = ["ph0llux <ph0llux@pm.me>"]
edition = "2018"
publish = false

[lib]
name = "pkdevsys_tools" # The name of the target.
path = "src/lib/mod.rs"	# The source file of the target.
test = true            	# Is tested by default.
bench = true           	# Is benchmarked by default.
doc = true              # Is documented by default.
edition = "2018"       	# The edition of the target.
crate-type = ["lib"]   	# The crate types to generate.

[[bin]]
name = "code_sign"
path = "src/bin/code_sign/main.rs"
test = true
bench = true

[[bin]]
name = "folder_code_sign"
path = "src/bin/folder_code_sign.rs"
test = true
bench = true

[[bin]]
name = "gen_config"
path = "src/bin/gen_pkdevsys_config.rs"
test = true
bench = true

[profile.release]
lto = true				# enable link time optimization
panic = 'unwind'		# unwind stack, if panic.
#strip = "symbols"		# strip symbol table (rust nightly is needed)
debug = false
opt-level = 2	  		# Optimize for performance (level 2).
codegen-units = 1		# Set to 1 to allow for maximum size reduction optimizations - at the expense of the compile time.

[dependencies]
toml = "0.5.8"
serde = { version = "1.0.124", features = [ "derive" ]}
phollaits = "0.2.5"
walkdir = "2.0.0"